--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -302,3 +302,15 @@
     opacity: 1
   }
 }
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
